# src/DTOs/request/CreateCommentary_Req.ts
@@ -1,4 +1,5 @@
 export default interface CreateCommentaryDTO_Req {
     text: string;
     petId: string;
+    parentId?: string | null;
 }
