# src/DTOs/response/CommentaryListDTO_Res.ts
@@ -3,6 +3,7 @@ export default interface CommentaryListDTO_Res {
   userId: string;
   text: string;
   createdAt: string;
+  parentId?: string | null;
   user: {
     displayName: string;
     photoURL: string;
